crates/stef-doc/tests/snapshots/render__render@types_nested.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "struct Sample {\n    value: vec<option<non_zero<hash_map<i64, box<string>>>>> @1,\n}"
input_file: crates/stef-parser/tests/inputs/types_nested.stef
---
--- types_nested/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>types_nested - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema types_nested</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
        
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- types_nested/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_nested</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample {
    value: vec&lt;option&lt;non_zero&lt;hash_map&lt;i64, box&lt;string&gt;&gt;&gt;&gt;&gt; @1,
}</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">2</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">value</span>:
        <span class="field-type">vec&lt;option&lt;non_zero&lt;hash_map&lt;i64, box&lt;string&gt;&gt;&gt;&gt;&gt;</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>vec</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>option</strong> <code>0..</code>
          <ul>
          <li>value: <strong>non_zero</strong> <code>0..</code>
          <ul>
          <li>value: <strong>hash_map</strong> <code>1..</code>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>key: <strong>i64</strong> <code>1..10</code></li>
          <li>value: <strong>box&lt;string&gt;</strong> <code>1..</code></li>
          </ul>
          </li>
          </ul>
          </li>
          </ul>
          </li>
          </ul>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
